--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -68,7 +68,7 @@
       <!-- btn menu burger -->
       <div class="flex items-center pl-6">
         <button type="button" id="btn-home-burger">
-          <i class="fa-solid fa-burger text-6xl"></i>
+          <i class="fa-solid fa-bars text-6xl"></i>
         </button>
       </div>
 
@@ -265,10 +265,13 @@
         Télécharger notre application
       </h1>
       <div class="flex justify-center items-center col-span-2">
-        <button class="w-28 h-28 hover:text-white">
-          <i class="text-5xl fa-brands fa-android"></i>
+        <div class="flex justify-center">
+          <button class="w-28 h-28 hover:text-red-400">
+
+          <img src="../../assets/img/icons8-android-os.svg" alt="" >
         </button>
-        <button class="w-28 h-28 hover:text-white">
+        </div>
+        <button class="w-28 h-28 hover:text-red-400">
           <i class="text-6xl fa-brands fa-apple"></i>
         </button>
       </div>
@@ -290,20 +293,22 @@
       <div class="text-5xl text-center py-10">
         <div>
           <a href=""
-            ><i class="fa-brands fa-linkedin hover:text-white"></i
+            ><i class="fa-brands fa-linkedin hover:text-red-400"></i
           ></a>
           <a href="https://github.com/Wana-171"
-            ><i class="fa-brands fa-square-github hover:text-white"></i
+            ><i class="fa-brands fa-square-github hover:text-red-400"></i
           ></a>
         </div>
         <a href="#"
-          ><i class="fa-brands fa-square-instagram hover:text-white"></i
+          >< class="fa-brands fa-square-instagram hover:text-red-400red-400
         ></a>
         <a href="#"
-          ><i class="fa-brands fa-square-twitter hover:text-white"></i
+          ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
         ></a>
       </div>
-      <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
+      <div class="flex flex-row items-end py-4">
+        <i class="fa-regular fa-copyright"></i> &nbsp;<h1 class="">Wana Agency</h1>
+      </div>
     </div>
   </div>
 </footer>
@@ -325,7 +330,9 @@
         </a>
       </div>
 
-      <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
+      <div class="flex flex-row items-end py-4">
+        <i class="fa-regular fa-copyright"></i> &nbsp;<h1 class="">Wana Agency</h1>
+      </div>
     </div>
 
     <!-- navbar footer 1 -->
@@ -378,18 +385,18 @@
       <div class="text-4xl text-center">
         <div class="flex flex-row justify-center py-8">
           <a href="#"
-            ><i class="fa-brands fa-linkedin hover:text-white"></i
+            ><i class="fa-brands fa-linkedin hover:text-red-400"></i
           ></a>
           <a href="https://github.com/Wana-171"
-            ><i class="fa-brands fa-square-github hover:text-white px-4"></i
+            ><i class="fa-brands fa-square-github hover:text-red-400 px-4"></i
           ></a>
           <a href="#"
             ><i
-              class="fa-brands fa-square-instagram hover:text-white pr-4"
+              class="fa-brands fa-square-instagram hover:text-red-400 pr-4"
             ></i
           ></a>
           <a href="#"
-            ><i class="fa-brands fa-square-twitter hover:text-white"></i
+            ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
           ></a>
         </div>
       </div>
@@ -400,10 +407,13 @@
         Télécharger notre application
       </h1>
       <div class="flex flex-row justify-center items-center px-2">
-        <button class="w-28 h-28 hover:text-white">
-          <i class="text-5xl fa-brands fa-android"></i>
+        <div class="flex justify-center">
+          <button class="w-28 h-28 hover:text-red-400">
+
+          <img src="../../assets/img/icons8-android-os.svg" alt="" >
         </button>
-        <button class="w-28 h-28 hover:text-white">
+        </div>
+        <button class="w-28 h-28 hover:text-red-400">
           <i class="text-6xl fa-brands fa-apple"></i>
         </button>
       </div>
