--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -70,7 +70,7 @@
         <!-- btn menu burger -->
         <div class="flex items-center pl-6">
           <button type="button" id="btn-home-burger">
-            <i class="fa-solid fa-burger text-6xl"></i>
+            <i class="fa-solid fa-bars text-6xl"></i>
           </button>
         </div>
 
@@ -299,9 +299,12 @@
             Télécharger notre application
           </h1>
           <div class="flex justify-center items-center col-span-2">
-            <button class="w-28 h-28 hover:text-white">
-              <i class="text-5xl fa-brands fa-android"></i>
+            <div class="flex justify-center">
+              <button class="w-28 h-28 hover:text-white">
+
+              <img src="../../assets/img/icons8-android-os.svg" alt="" >
             </button>
+            </div>
             <button class="w-28 h-28 hover:text-white">
               <i class="text-6xl fa-brands fa-apple"></i>
             </button>
@@ -324,17 +327,17 @@
           <div class="text-5xl text-center py-10">
             <div>
               <a href=""
-                ><i class="fa-brands fa-linkedin hover:text-white"></i
+                ><i class="fa-brands fa-linkedin hover:text-red-400"></i
               ></a>
               <a href="https://github.com/Wana-171"
-                ><i class="fa-brands fa-square-github hover:text-white"></i
+                ><i class="fa-brands fa-square-github hover:text-red-400"></i
               ></a>
             </div>
             <a href="#"
-              ><i class="fa-brands fa-square-instagram hover:text-white"></i
+              ><i class="fa-brands fa-square-instagram hover:text-red-400"></i
             ></a>
             <a href="#"
-              ><i class="fa-brands fa-square-twitter hover:text-white"></i
+              ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
             ></a>
           </div>
           <i class="fa-regular fa-copyright"></i><h1>Wana Agency</h1>
@@ -413,18 +416,18 @@
           <div class="text-4xl text-center">
             <div class="flex flex-row justify-center py-8">
               <a href="#"
-                ><i class="fa-brands fa-linkedin hover:text-white"></i
+                ><i class="fa-brands fa-linkedin hover:text-red-400"></i
               ></a>
               <a href="https://github.com/Wana-171"
-                ><i class="fa-brands fa-square-github hover:text-white px-4"></i
+                ><i class="fa-brands fa-square-github hover:text-red-400 px-4"></i
               ></a>
               <a href="#"
                 ><i
-                  class="fa-brands fa-square-instagram hover:text-white pr-4"
+                  class="fa-brands fa-square-instagram hover:text-red-400 pr-4"
                 ></i
               ></a>
               <a href="#"
-                ><i class="fa-brands fa-square-twitter hover:text-white"></i
+                ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
               ></a>
             </div>
           </div>
@@ -435,10 +438,15 @@
             Télécharger notre application
           </h1>
           <div class="flex flex-row justify-center items-center px-2">
-            <button class="w-28 h-28 hover:text-white">
-              <i class="text-5xl fa-brands fa-android"></i>
-            </button>
-            <button class="w-28 h-28 hover:text-white">
+            
+              <div class="flex justify-center">
+                <button class="w-28 h-28 hover:text-red-400">
+  
+                <img src="../../assets/img/icons8-android-os.svg" alt="" >
+              </button>
+              </div>
+          
+            <button class="w-28 h-28 hover:text-red-400">
               <i class="text-6xl fa-brands fa-apple"></i>
             </button>
           </div>
