--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -183,7 +183,7 @@
   </main>
 </div>
 <hr>
-<div  data-aos="zoom-in" class="text-center flex flex-col justify-center lg:grid lg:grid-cols-3   md:flex md:flex-col ml-" >
+<div  data-aos="zoom-in" class="text-center flex flex-col justify-center xl:grid xl:grid-cols-3    " >
   <div class=" flex justify-center">
 
     <div   class=" shadow-2xl  shadow-black mt-5 h-auto bg-pink-200 w-96 ">
