--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -6,26 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../../assets/css/output.css" rel="stylesheet">
     <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Services</title>
 </head>
 <body class=" bg-pink-100">
-  <header id="shadow-light1" class="hidden lg:block shadow-xl shadow-black">
+  <header id="shadow-light1" class="hidden lg:block shadow-xl shadow-black bg-gradient-to-r from-pink-200 to-red-400">
     <div class="grid grid-cols-8 drop-shadow">
       <div class="flex justify-center">
         <a href="http://localhost:8080/">
           <img
             class="py-4"
-            src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+            src="../../assets/img/logo-no-background.svg"
             width="120px"
             height="auto"
             alt=""
         /></a>
       </div>
-      <button type="button" id="btn-dark-mode1">
-        <i class="fa-solid fa-moon text-6xl"></i>
-      </button>
+        <div class="flex col-span-2 justify-center items-center">
 
-      <div class="col-span-6 flex justify-center items-center">
+        <button type="button" id="btn-dark-mode1">
+        <img src="../../assets/img/soleil.png" alt="" width="90px" >
+        </button>
+      </div>
+    
+
+      <div class="col-span-4 flex justify-center items-center uppercase">
         <nav class="text-3xl">
           <ul class="flex">
             <li>
@@ -63,7 +69,7 @@
 
   <!-- mod tablet & mobile -->
 
-  <header id="mobile-shadow-light1" class="lg:hidden shadow-xl shadow-black">
+  <header id="mobile-shadow-light1" class="lg:hidden shadow-xl shadow-black  bg-gradient-to-r from-pink-200 to-red-400">
     <div class="grid grid-cols-3">
       <!-- btn menu burger -->
       <div class="flex items-center pl-6">
@@ -75,16 +81,17 @@
       <div class="flex justify-center py-2">
         <a href="http://localhost:8080/">
           <img
-            src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+            src="../../assets/img/logo-no-background.svg"
             width="120px"
             height="auto"
             alt=""
         /></a>
       </div>
 
-      <div class="flex justify-end items-center pr-6">
-        <button type="button" id="btn-dark-mode2">
-          <i class="fa-solid fa-moon text-6xl"></i>
+      <div class="flex  justify-center items-center">
+
+        <button type="button" id="btn-dark-mode1">
+        <img src="../../assets/img/soleil.png" alt="" width="90px" >
         </button>
       </div>
 
@@ -97,22 +104,22 @@
       >
         <ul>
           <li>
-            <a class="hover:border-b-4 hover:border-black" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
               >Accueil</a
             >
           </li>
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
               >Streaming</a
             >
           </li>
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
               >Services</a
             >
           </li>
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
               >Boutique</a
             >
           </li>
@@ -128,18 +135,16 @@
     </div>
   </header>
   <!-- header done -->
-<main class="lg:h-3/4 shadow-xl shadow-black lg:shadow-xl lg:shadow-black ">
+<main class=" shadow-xl shadow-black lg:shadow-xl lg:shadow-black pb-28 ">
   <a class="text-end p-2 text-white" href="https://main--wana-agency.netlify.app"></a>
-  <hr>
   <div class="my-20">
-    <h1 class="text-center uppercase text-black font-medium text-3xl lg:text-6xl">
+    <h1 class="text-center uppercase text-black font-medium text-3xl lg:text-6xl  border-y-2 border-red-400 py-8">
       Nos abonnements
     </h1>
-    <hr>
   </div>
-  <div class="flex md:flex lg:flex lg:flex-row md:flex-col flex-col justify-center md:justify-center lg:justify-around pt-4 md:pt-4 sm:pl-4">
+  <div data-aos="zoom-in" class="flex md:flex lg:flex lg:flex-row md:flex-col flex-col justify-center md:justify-center lg:justify-around p md:pt-4 sm:pl-4 ">
     <div class="pb-4 md:flex md:justify-center">
-      <section class="border-x-4 border-y-4 inline-block w-80 h-auto rounded-md p-8 drop-shadow-xl border-black bg-pink-200">
+      <section class="border-x-4 border-y-4 inline-block w-80  rounded-md p-8 drop-shadow-xl border-black bg-pink-200">
         <div class="flex justify-center">
             <i class="fa-solid fa-user text-black p-1 text-4xl"></i>
         </div>
@@ -167,42 +172,58 @@
       </div> 
     </section >
     <div class="pb-4 md:flex md:justify-center lg:place-content-center">
-    <section class="bg-pink-200 border-x-4 border-y-4 border-black drop-shadow-xl inline-block w-80 h-80 rounded-md p-8">
-        <span>
-
-            <i class="fa-solid fa-people-group text-black p-1"></i>
-        </span>
-
-        <h2 class="text-black p-1 font-bold" >
-            ABONNEMENT CONFORT
+      <section class="border-x-4 border-y-4 inline-block w-80  rounded-md p-8 drop-shadow-xl border-black bg-pink-200">
+        <div class="flex justify-center">
+            <i class="fa-solid fa-user text-black p-1 text-4xl"></i>
+        </div>
+        <h2 class="text-black text-center p-1 font-bold uppercase py-8">
+            Abonnement confort
         </h2>
-        <p class="text-black p-1" >
-         Protection de votre site  et de la maintenance  sera renforcé a long terme et vous pourrais acccueillir plus de visiteurs sur votre site (100k seulement) 
-        </p>
-        <div class="flex justify-center pt-2">
-        <button class=" bg-white rounded-xl text-pink-900  text-pink- hover:bg-pink-400 hover:text-white  h-9 w-36 border-x-2 border-black">
-            payer
+        <ul class="italic">
+          <li>
+            - Votre site sera heberger
+          </li>
+          <li>
+            - Capaciter limiter pour accueilli
+          </li>
+          <li>
+            - Performance accrue
+          </li>
+        </ul>
+        <div class="flex justify-center pt-8 lg:pt-8">
+        <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
+            Choisir
+            <br />
+            cette offre
         </button>
       </div>
-      </div>
+      </div> 
     </section >
-      <div class="md:flex md:justify-center">
-    <section class="bg-pink-200 w-80 h-80 inline-block rounded-md p-8 border-x-4 border-y-4 border-black drop-shadow-xl">
-        <span>
-            
-            <i class="fa-solid fa-star text-black p-1"></i>
-        </span>
-            <h2 class=" p-1  text-black font-bold">
-
-            ABONNEMENT PREMIUM 
-            </h2>
-            <p class=" p-1 text-black">
-                Vous aurait de meilleure protection de vos site web et de la maintenance qui sera extrement renforcé vous pourrais accueillir plus de 500k de visiteurs 
-            </p>
-            <div class="flex justify-center pt-2 lg:pt-2">
-            <button class="bg-white rounded-xl text-pink-900  hover:bg-pink-400 hover:text-white h-9 w-36 p-1 border-x-2 border-black">
-                payer
-            </button>
+    <div class="pb-4 md:flex md:justify-center lg:place-content-center">
+        <section class="border-x-4 border-y-4 inline-block w-80  rounded-md p-8 drop-shadow-xl border-black bg-pink-200  ">
+          <div class="flex justify-center">
+              <i class="fa-solid fa-user text-black p-1 text-4xl"></i>
+          </div>
+          <h2 class="text-black text-center p-1 font-bold uppercase py-8">
+              Abonnement premium
+          </h2>
+          <ul class="italic">
+            <li>
+              - Votre site sera heberger
+            </li>
+            <li>
+              - Capaciter limiter pour accueilli
+            </li>
+            <li>
+              - Performance accrue
+            </li>
+          </ul>
+          <div class="flex justify-center pt-8 lg:pt-8">
+          <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
+              Choisir
+              <br />
+              cette offre
+          </button>
           </div>
           </div>
     </section>
@@ -210,7 +231,7 @@
 </main>
  <!-- footer -->
  <footer class="">
-  <div id="footer-mobile" class="md:hidden">
+  <div id="footer-mobile" class="md:hidden bg-gradient-to-r from-pink-200 to-red-400">
     <div class="grid grid-rows-2">
       <div class="flex justify-center items-center pb-10">
         <nav>
@@ -282,7 +303,7 @@
       <div class="flex justify-center items-center py-10">
         <a href="http://localhost:8080/">
           <img
-            src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+            src="../../assets/img/logo-no-background.svg"
             width="150px"
             alt="logo-agency"
           />
@@ -317,13 +338,13 @@
 <!-- ********** Tablet & Desktop ******** -->
 <!-- logo  -->
 
-<footer class="w-full hidden md:block lg:block">
+<footer class="w-full hidden md:block lg:block bg-gradient-to-r from-pink-200 to-red-400">
   <div class="grid grid-cols-4">
     <div class="grid grid-rows-1 md:mx-4">
       <div class="flex justify-center items-center md:py-4">
         <a href="http://localhost:8080/">
           <img
-            src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+            src="../../assets/img/logo-no-background.svg"
             width="150px"
             alt="logo-agency"
           />
@@ -421,4 +442,7 @@
   </div>
 </footer>
 </body>
+<script>
+  AOS.init();
+</script>
 </html>
