--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -28,9 +28,11 @@
       </div>
       <div class="flex col-span-2 justify-center items-center">
 
-        <button type="button" id="btn-dark-mode1">
-        <img src="../../assets/img/soleil.png" alt="" width="90px" >
+       
+        <button type="button" id="btn-dark-mode1"><img id="rotate-img" class="rotate-0" src="../../assets/img/soleil.png" alt="" width="90px">
+
         </button>
+        
       </div>
 
       <div class="col-span-4 flex justify-center items-center">
