--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -382,11 +382,11 @@
         <div class="flex justify-center items-center col-span-2">
           <div class="flex justify-center">
             
-            <button class="w-28  hover:text-red-400">
+            <button class="w-28  hover:text-white">
               <img src="../../assets/img/icons8-android-os.svg" alt="" >
             </button>
             </div>
-          <button class="w-28  hover:text-red-400">
+          <button class="w-28  hover:text-white">
             <i class="text-6xl fa-brands fa-apple"></i>
           </button>
         </div>
@@ -397,7 +397,7 @@
         <div class="flex justify-center items-center py-10">
           <a href="http://localhost:8080/">
             <img
-              src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+              src="../../assets/img/logo-no-background.svg"
               width="150px"
               alt="logo-agency"
             />
@@ -408,17 +408,17 @@
         <div class="text-5xl text-center py-10">
           <div>
             <a href=""
-              ><i class="fa-brands fa-linkedin hover:text-red-400"></i
+              ><i class="fa-brands fa-linkedin hover:text-white"></i
             ></a>
             <a href="https://github.com/Wana-171"
-              ><i class="fa-brands fa-square-github hover:text-red-400"></i
+              ><i class="fa-brands fa-square-github hover:text-white"></i
             ></a>
           </div>
           <a href="#"
-            ><i class="fa-brands fa-square-instagram hover:text-red-400"></i
+            ><i class="fa-brands fa-square-instagram hover:text-white"></i
           ></a>
           <a href="#"
-            ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
+            ><i class="fa-brands fa-square-twitter hover:text-white"></i
           ></a>
         </div>
         <h1><i class="fa-regular fa-copyright"></i>Wana Agency</h1>
@@ -498,18 +498,18 @@
         <div class="text-4xl text-center">
           <div class="flex flex-row justify-center py-8">
             <a href="#"
-              ><i class="fa-brands fa-linkedin hover:text-red-400"></i
+              ><i class="fa-brands fa-linkedin hover:text-white"></i
             ></a>
             <a href="https://github.com/Wana-171"
-              ><i class="fa-brands fa-square-github hover:text-red-400 px-4"></i
+              ><i class="fa-brands fa-square-github hover:text-white px-4"></i
             ></a>
             <a href="#"
               ><i
-                class="fa-brands fa-square-instagram hover:text-red-400 pr-4"
+                class="fa-brands fa-square-instagram hover:text-white pr-4"
               ></i
             ></a>
             <a href="#"
-              ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
+              ><i class="fa-brands fa-square-twitter hover:text-white"></i
             ></a>
           </div>
         </div>
@@ -521,12 +521,12 @@
         </h1>
         <div class="flex flex-row justify-center items-center px-2">
           <div class="flex justify-center">
-              <button class="w-28 h-28 hover:text-red-400">
+              <button class="w-28 h-28 hover:text-white">
 
               <img src="../../assets/img/icons8-android-os.svg" alt="" >
             </button>
             </div>
-          <button class="w-28 h-28 hover:text-red-400">
+          <button class="w-28 h-28 hover:text-white">
             <i class="text-6xl fa-brands fa-apple"></i>
           </button>
         </div>
