--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -331,18 +331,18 @@
           <!--********** SOCIAL LINK ********** -->
           <div class="text-5xl text-center py-10">
             <div>
-              <a href=""
-                ><i class="fa-brands fa-linkedin hover:text-red-400"></i
-              ></a>
+              < href=""
+                ><i class="fa-brands fa-linkedin hover:text-white"></i
+        -whitetext-white
               <a href="https://github.com/Wana-171"
-                ><i class="fa-brands fa-square-github hover:text-red-400"></i
+                ><i class="fa-brands fa-square-github hover:text-white"></i
               ></a>
             </div>
             <a href="#"
-              ><i class="fa-brands fa-square-instagram hover:text-red-400"></i
+              ><i class="fa-brands fa-square-instagram hover:text-white"></i
             ></a>
             <a href="#"
-              ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
+              ><i class="fa-brands fa-square-twitter hover:text-white"></i
             ></a>
           </div>
           <i class="fa-regular fa-copyright"></i><h1>Wana Agency</h1>
@@ -360,7 +360,7 @@
           <div class="flex justify-center items-center md:py-4">
             <a href="http://localhost:8080/">
               <img
-                src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+                src="../../assets/img/logo-no-background.svg"
                 width="150px"
                 alt="logo-agency"
               />
@@ -421,18 +421,18 @@
           <div class="text-4xl text-center">
             <div class="flex flex-row justify-center py-8">
               <a href="#"
-                ><i class="fa-brands fa-linkedin hover:text-red-400"></i
+                ><i class="fa-brands fa-linkedin hover:text-white"></i
               ></a>
               <a href="https://github.com/Wana-171"
-                ><i class="fa-brands fa-square-github hover:text-red-400 px-4"></i
+                ><i class="fa-brands fa-square-github hover:text-white px-4"></i
               ></a>
               <a href="#"
                 ><i
-                  class="fa-brands fa-square-instagram hover:text-red-400 pr-4"
+                  class="fa-brands fa-square-instagram hover:text-white pr-4"
                 ></i
               ></a>
               <a href="#"
-                ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
+                ><i class="fa-brands fa-square-twitter hover:text-white"></i
               ></a>
             </div>
           </div>
@@ -445,13 +445,13 @@
           <div class="flex flex-row justify-center items-center px-2">
             
               <div class="flex justify-center">
-                <button class="w-28 h-28 hover:text-red-400">
+                <button class="w-28 h-28 hover:text-white">
   
-                <img src="../../assets/img/icons8-android-os.svg" alt="" >
+                <img src="../../assets/img/icons8-android-os.svg" alt="" class="hover:text-white" >
               </button>
               </div>
           
-            <button class="w-28 h-28 hover:text-red-400">
+            <button class="w-28 h-28 hover:text-white">
               <i class="text-6xl fa-brands fa-apple"></i>
             </button>
           </div>
