--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -287,12 +287,12 @@
       </h1>
       <div class="flex justify-center items-center col-span-2">
         <div class="flex justify-center">
-          <button class="w-28 h-28 hover:text-red-400">
+          <button class="w-28 h-28 hover:text-white">
 
           <img src="../../assets/img/icons8-android-os.svg" alt="" >
         </button>
         </div>
-        <button class="w-28 h-28 hover:text-red-400">
+        <button class="w-28 h-28 hover:text-white">
           <i class="text-6xl fa-brands fa-apple"></i>
         </button>
       </div>
@@ -314,17 +314,18 @@
       <div class="text-5xl text-center py-10">
         <div>
           <a href=""
-            ><i class="fa-brands fa-linkedin hover:text-red-400"></i
+            ><i class="fa-brands fa-linkedin hover:text-white"></i
           ></a>
           <a href="https://github.com/Wana-171"
-            ><i class="fa-brands fa-square-github hover:text-red-400"></i
+            ><i class="fa-brands fa-square-github hover:text-white"></i
           ></a>
         </div>
         <a href="#"
-          >< class="fa-brands fa-square-instagram hover:text-red-400red-400
-        ></a>
+        ><i
+        class="fa-brands fa-square-instagram hover:text-white pr-4"
+      ></i</a>
         <a href="#"
-          ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
+          ><i class="fa-brands fa-square-twitter hover:text-white"></i
         ></a>
       </div>
       <div class="flex flex-row items-end py-4">
@@ -406,18 +407,18 @@
       <div class="text-4xl text-center">
         <div class="flex flex-row justify-center py-8">
           <a href="#"
-            ><i class="fa-brands fa-linkedin hover:text-red-400"></i
+            ><i class="fa-brands fa-linkedin hover:text-white"></i
           ></a>
           <a href="https://github.com/Wana-171"
-            ><i class="fa-brands fa-square-github hover:text-red-400 px-4"></i
+            ><i class="fa-brands fa-square-github hover:text-white px-4"></i
           ></a>
           <a href="#"
             ><i
-              class="fa-brands fa-square-instagram hover:text-red-400 pr-4"
+              class="fa-brands fa-square-instagram hover:text-white pr-4"
             ></i
           ></a>
           <a href="#"
-            ><i class="fa-brands fa-square-twitter hover:text-red-400"></i
+            ><i class="fa-brands fa-square-twitter hover:text-white"></i
           ></a>
         </div>
       </div>
@@ -429,12 +430,12 @@
       </h1>
       <div class="flex flex-row justify-center items-center px-2">
         <div class="flex justify-center">
-          <button class="w-28 h-28 hover:text-red-400">
+          <button class="w-28 h-28 hover:text-white">
 
           <img src="../../assets/img/icons8-android-os.svg" alt="" >
         </button>
         </div>
-        <button class="w-28 h-28 hover:text-red-400">
+        <button class="w-28 h-28 hover:text-white">
           <i class="text-6xl fa-brands fa-apple"></i>
         </button>
       </div>
