--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -8,6 +8,7 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>CONTACT</title>
     <link href="../../assets/css/output.css" rel="stylesheet" />
+    <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
   </head>
   <body class="bg-pink-100">
     <!-- nav mod desktop -->
