--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -322,8 +322,8 @@
           <div class="flex justify-center items-center py-10">
             <a href="http://localhost:8080/">
               <img
-                src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
-                width="150px"
+                src="../../assets/img/logo-no-background.svg"
+                width="120px"
                 alt="logo-agency"
               />
             </a>
@@ -332,9 +332,11 @@
           <!--********** SOCIAL LINK ********** -->
           <div class="text-5xl text-center py-10">
             <div>
-              < href=""
-                ><i class="fa-brands fa-linkedin hover:text-white"></i
-        -whitetext-white
+              <a
+            href="https://www.linkedin.com/in/wana-agency-70a58424b/"
+            target="_blank"
+            ><i class="fa-brands fa-linkedin text-4xl hover:text-white"></i
+          ></a> 
               <a href="https://github.com/Wana-171"
                 ><i class="fa-brands fa-square-github hover:text-white"></i
               ></a>
