--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -7,7 +7,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   
-  <title>WANA Agnecy</title>
+  <title>WANA Agency</title>
   <link href="../../assets/css/output.css" rel="stylesheet">
   <link rel="shortcut icon" href="../../assets/img/favicon.ico" type="image/x-icon">
   
