--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -52,7 +52,7 @@
                 >
               </li>
               <li class="pr-8">
-                <a class="hover:border-b-4 hover:border-black" href="#"
+                <a class="hover:border-b-4 hover:border-black" href="https://wana-shop-saewt1towb.live-website.com/"
                   >Boutique</a
                 >
               </li>
@@ -121,7 +121,7 @@
               >
             </li>
             <li class="pt-4">
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href="https://wana-shop-saewt1towb.live-website.com/"
                 >Boutique</a
               >
             </li>
