--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -54,7 +54,7 @@
               >
             </li>
             <li class="pr-8">
-              <a class="hover:border-b-4 hover:border-black uppercase" href="#"
+              <a class="hover:border-b-4 hover:border-black uppercase" href="https://wana-shop-saewt1towb.live-website.com/"
                 >Boutique</a
               >
             </li>
@@ -125,7 +125,7 @@
             >
           </li>
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="https://wana-shop-saewt1towb.live-website.com/"
               >Boutique</a
             >
           </li>
