--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -50,7 +50,7 @@
               >
             </li>
             <li class="pr-8">
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href="https://wana-shop-saewt1towb.live-website.com/"
                 >Boutique</a
               >
             </li>
@@ -119,7 +119,7 @@
             >
           </li>
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="https://wana-shop-saewt1towb.live-website.com/"
               >Boutique</a
             >
           </li>
