--- a/src/pages/services/index.html
+++ b/src/pages/services/index.html
@@ -14,7 +14,7 @@
   <header id="shadow-light1" class="hidden lg:block shadow-xl shadow-black bg-gradient-to-r from-pink-200 to-red-400">
     <div class="grid grid-cols-8 drop-shadow">
       <div class="flex justify-center">
-        <a href="http://localhost:8080/">
+        <a href="https://wana-agency.netlify.app/">
           <img
             class="py-4"
             src="../../assets/img/logo-no-background.svg"
@@ -25,9 +25,7 @@
       </div>
         <div class="flex col-span-2 justify-center items-center">
 
-        <button type="button" id="btn-dark-mode1">
-        <img src="../../assets/img/soleil.png" alt="" width="90px" >
-        </button>
+        
       </div>
     
 
@@ -35,17 +33,17 @@
         <nav class="text-3xl">
           <ul class="flex">
             <li>
-              <a class="hover:border-b-4 hover:border-black" href="#"
+              <a class="hover:border-b-4 hover:border-black" href="https://wana-agency.netlify.app/"
                 >Accueil</a
               >
             </li>
-            <li class="px-8">
+            <!-- <li class="px-8">
               <a class="hover:border-b-4 hover:border-black" href="#"
                 >Streaming</a
               >
-            </li>
-            <li class="pr-8">
-              <a class="hover:border-b-4 hover:border-black" href="#"
+            </li> -->
+            <li class="pr-8 pl-10">
+              <a class="hover:border-b-4 hover:border-black" href="https://wana-agency.netlify.app/services"
                 >Services</a
               >
             </li>
@@ -57,7 +55,7 @@
             <li>
               <a
                 class="hover:border-b-4 hover:border-black"
-                href="http://localhost:3000/contact.html"
+                href="https://wana-agency.netlify.app/contact"
                 >Contact</a
               >
             </li>
@@ -79,7 +77,7 @@
       </div>
 
       <div class="flex justify-center py-2">
-        <a href="http://localhost:8080/">
+        <a href="https://wana-agency.netlify.app/">
           <img
             src="../../assets/img/logo-no-background.svg"
             width="120px"
@@ -90,9 +88,7 @@
 
       <div class="flex  justify-center items-center">
 
-        <button type="button" id="btn-dark-mode1">
-        <img src="../../assets/img/soleil.png" alt="" width="90px" >
-        </button>
+
       </div>
 
       <!-- menu burger -->
@@ -104,17 +100,17 @@
       >
         <ul>
           <li>
-            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="https://wana-agency.netlify.app/"
               >Accueil</a
             >
           </li>
-          <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
+          <!-- <li class="pt-4">
+            <a class="hover:border-b-4 hover:border-black uppercase" href=""
               >Streaming</a
             >
-          </li>
+          </li> -->
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black uppercase" href="#"
+            <a class="hover:border-b-4 hover:border-black uppercase" href="https://wana-agency.netlify.app/services"
               >Services</a
             >
           </li>
@@ -126,7 +122,7 @@
           <li class="pt-4">
             <a
               class="hover:border-b-4 hover:border-black"
-              href="http://localhost:3000/contact.html"
+              href="https://wana-agency.netlify.app/contact"
               >Contact</a
             >
           </li>
@@ -135,8 +131,8 @@
     </div>
   </header>
   <!-- header done -->
-<main class=" shadow-xl shadow-black lg:shadow-xl lg:shadow-black pb-28 ">
-  <a class="text-end p-2 text-white" href="https://main--wana-agency.netlify.app"></a>
+<main class=" shadow-xl shadow-black lg:shadow-xl lg:shadow-black pb-28">
+  <a class="text-end p-2 text-white" href="https://wana-agency.netlify.app"></a>
   <div class="my-20">
     <h1 class="text-center uppercase text-black font-medium text-3xl lg:text-6xl  border-y-2 border-red-400 py-8">
       Nos abonnements
@@ -149,7 +145,7 @@
             <i class="fa-solid fa-user text-black p-1 text-4xl"></i>
         </div>
         <h2 class="text-black text-center p-1 font-bold uppercase py-8">
-            Abonnement gratuit
+            Abonnement standard
         </h2>
         <ul class="italic">
           <li>
@@ -163,11 +159,14 @@
           </li>
         </ul>
         <div class="flex justify-center pt-8 lg:pt-8">
-        <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
-            Choisir
-            <br />
-            cette offre
-        </button>
+          <a href="https://wana-shop-saewt1towb.live-website.com/produit/standard/">
+
+            <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
+                Choisir
+                <br />
+                cette offre
+            </button>
+          </a>
       </div>
       </div> 
     </section >
@@ -191,11 +190,14 @@
           </li>
         </ul>
         <div class="flex justify-center pt-8 lg:pt-8">
-        <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
-            Choisir
-            <br />
-            cette offre
-        </button>
+          <a href="https://wana-shop-saewt1towb.live-website.com/produit/confort/">
+
+            <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
+                Choisir
+                <br />
+                cette offre
+            </button>
+          </a>
       </div>
       </div> 
     </section >
@@ -219,11 +221,14 @@
             </li>
           </ul>
           <div class="flex justify-center pt-8 lg:pt-8">
-          <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
-              Choisir
-              <br />
-              cette offre
-          </button>
+            <a href="https://wana-shop-saewt1towb.live-website.com/produit/premium/">
+
+              <button class="bg-white rounded-xl py-4 text-pink-900  hover:bg-pink-400 hover:text-white h-auto w-36 border-x-2 border-black">
+                  Choisir
+                  <br />
+                  cette offre
+              </button>
+            </a>
           </div>
           </div>
     </section>
@@ -289,7 +294,7 @@
         <div class="flex justify-center">
           <button class="w-28 h-28 hover:text-white">
 
-          <img src="../../assets/img/icons8-android-os.svg" alt="" >
+            <i class="text-5xl fa-brands fa-android"></i>
         </button>
         </div>
         <button class="w-28 h-28 hover:text-white">
@@ -301,7 +306,7 @@
     <!-- logo -->
     <div class="grid grid-cols-2 pt-8">
       <div class="flex justify-center items-center py-10">
-        <a href="http://localhost:8080/">
+        <a href="https://wana-agency.netlify.app">
           <img
             src="../../assets/img/logo-no-background.svg"
             width="150px"
@@ -343,7 +348,7 @@
   <div class="grid grid-cols-4">
     <div class="grid grid-rows-1 md:mx-4">
       <div class="flex justify-center items-center md:py-4">
-        <a href="http://localhost:8080/">
+        <a href="https://wana-agency.netlify.app">
           <img
             src="../../assets/img/logo-no-background.svg"
             width="150px"
@@ -432,7 +437,7 @@
         <div class="flex justify-center">
           <button class="w-28 h-28 hover:text-white">
 
-          <img src="../../assets/img/icons8-android-os.svg" alt="" >
+            <i class="text-5xl fa-brands fa-android"></i>
         </button>
         </div>
         <button class="w-28 h-28 hover:text-white">
