--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -46,7 +46,7 @@
                 >Streaming</a
               >
             </li> -->
-            <li class="pr-8">
+            <li class="pr-8 ml-8">
               <a class="hover:border-b-4 hover:border-black uppercase" href="https://wana-agency.netlify.app/services"
                 >Services</a
               >
@@ -117,7 +117,7 @@
               >Streaming</a
             >
           </li> -->
-          <li class="pt-4 ml-8 ">
+          <li class="pt-4 ml-8">
             <a class="hover:border-b-4 hover:border-black uppercase pl-8" href="https://wana-agency.netlify.app/services" target="_blank"
               >Services</a
             >
