--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -84,7 +84,7 @@
         <a href="https://wana-agency.netlify.app">
           <img
             class="py-4"
-            src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+            src="../../assets/img/logo-no-background.svg"
             width="120px"
             height="auto"
             alt=""
@@ -117,7 +117,7 @@
               >Streaming</a
             >
           </li> -->
-          <li class="pt-4 ml-8">
+          <li class="pt-4">
             <a class="hover:border-b-4 hover:border-black uppercase pl-8" href="https://wana-agency.netlify.app/services" target="_blank"
               >Services</a
             >
