--- a/src/pages/home/index.html
+++ b/src/pages/home/index.html
@@ -118,7 +118,7 @@
             >
           </li> -->
           <li class="pt-4">
-            <a class="hover:border-b-4 hover:border-black uppercase pl-8" href="https://wana-agency.netlify.app/services" target="_blank"
+            <a class="hover:border-b-4 hover:border-black uppercase " href="https://wana-agency.netlify.app/services" target="_blank"
               >Services</a
             >
           </li>
