--- a/src/pages/contact/index.html
+++ b/src/pages/contact/index.html
@@ -81,7 +81,7 @@
         <div class="flex justify-center py-2">
           <a href="https://wana-agency.netlify.app/">
             <img
-              src="./assets/img/logo-wana-agency-web-rougeblanc.jpg"
+              src="../../assets/img/logo-no-background.svg"
               width="120px"
               height="auto"
               alt=""
